// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Text renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cPdZqI"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 faxITP"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 IdHaF"
          disabled={true}
          placeholder=" "
          type="text"
          value="Text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bNHALK"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 dAzyuN"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 fHtPyf"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cPdZqI"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 faxITP"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 IdHaF"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cPdZqI"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 faxITP"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 IdHaF"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cPdZqI"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 faxITP"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 IdHaF"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 cPdZqI"
        placeholder="medium"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 faxITP"
        placeholder="large"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 elFYRA"
          placeholder="xlarge"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 fXnezT"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 XPyrk"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 kEpyYM"
      >
        <input
          className="Input-qkdgvx-0 IdHaF"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 kulgvR"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
